2022-11-06T16:06:37Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3405050543 # 598
* notice: last 14d: unq all: 3 5641
* notice: prev accum: outdated-unq outdated-all / unq all: 1188 81205 / 1215 86870
* notice: next accum: outdated-unq outdated-all / unq all: 1188 81205 / 1215 86846
* notice: prev exec diff / last date diff / accum: unq all: +0 +122 -0 -146 / +1 +262 -0 -0 / 1 262
* notice: removed / changed dates: [] / [2022-10-23 2022-11-06]

2022-11-06T08:07:21Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3403522888 # 597
* notice: last 14d: unq all: 3 5665
* notice: prev accum: outdated-unq outdated-all / unq all: 1188 81205 / 1214 86909
* notice: next accum: outdated-unq outdated-all / unq all: 1188 81205 / 1215 86870
* notice: prev exec diff / last date diff / accum: unq all: +1 +142 -0 -181 / +1 +140 -0 -0 / 1 140
* notice: removed / changed dates: [] / [2022-10-23 2022-11-05 2022-11-06]

2022-11-06T00:31:42Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3402271551 # 596
* notice: last 14d: unq all: 3 5704
* notice: prev accum: outdated-unq outdated-all / unq all: 1185 80797 / 1213 86432
* notice: next accum: outdated-unq outdated-all / unq all: 1188 81205 / 1214 86909
* notice: prev exec diff / last date diff / accum: unq all: +0 +149 -0 -15 / +1 +411 -0 -0 / 1 411
* notice: removed / changed dates: [2022-10-22] / [2022-10-23 2022-11-05]

2022-11-05T16:02:50Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3400743187 # 595
* notice: last 14d: unq all: 3 5635
* notice: prev accum: outdated-unq outdated-all / unq all: 1185 80797 / 1213 86457
* notice: next accum: outdated-unq outdated-all / unq all: 1185 80797 / 1213 86432
* notice: prev exec diff / last date diff / accum: unq all: +0 +122 -0 -147 / +1 +262 -0 -0 / 1 262