@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-10-25T00:46:39Z",
-  "count" : 398,
+  "timestamp" : "2022-11-07T00:29:48Z",
+  "count" : 387,
   "count_minmax" : [ 128, 398 ],
-  "count_decinc" : [ -0, +398 ],
+  "count_decinc" : [ -11, +398 ],
   "uniques" : 2,
   "uniques_minmax" : [ 2, 2 ],
   "uniques_decinc" : [ -0, +2 ]
