@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-11-06T16:06:37Z",
-  "count" : 262,
-  "count_minmax" : [ 140, 262 ],
-  "count_decinc" : [ -0, +262 ],
+  "timestamp" : "2022-11-07T00:29:48Z",
+  "count" : 410,
+  "count_minmax" : [ 140, 410 ],
+  "count_decinc" : [ -0, +410 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
