@@ -1,20 +1,13 @@
 {
-  "timestamp" : "2022-11-06T16:06:37Z",
-  "count_outdated" : 81205,
-  "uniques_outdated" : 1188,
-  "count" : 86846,
+  "timestamp" : "2022-11-07T00:29:48Z",
+  "count_outdated" : 81612,
+  "uniques_outdated" : 1190,
+  "count" : 87325,
   "uniques" : 1215,
   "clones" : [
     {
-      "timestamp": "2022-10-23T00:00:00Z",
-      "count": 65,
-      "count_minmax": [ 65, 407 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ]
-    },
-    {
       "timestamp": "2022-10-24T00:00:00Z",
-      "count": 398,
+      "count": 387,
       "count_minmax": [ 128, 398 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ]
@@ -105,8 +98,8 @@
     },
     {
       "timestamp": "2022-11-06T00:00:00Z",
-      "count": 262,
-      "count_minmax": [ 140, 262 ],
+      "count": 410,
+      "count_minmax": [ 140, 410 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
