@@ -1,15 +1,10 @@
 {
-  "count": 5641,
+  "count": 5713,
   "uniques": 3,
   "clones": [
     {
-      "timestamp": "2022-10-23T00:00:00Z",
-      "count": 65,
-      "uniques": 2
-    },
-    {
       "timestamp": "2022-10-24T00:00:00Z",
-      "count": 398,
+      "count": 387,
       "uniques": 2
     },
     {
@@ -74,7 +69,7 @@
     },
     {
       "timestamp": "2022-11-06T00:00:00Z",
-      "count": 262,
+      "count": 410,
       "uniques": 1
     }
   ]
