@@ -1,3 +1,11 @@
+2022-11-07T00:29:48Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3406679681 # 599
+* notice: last 14d: unq all: 3 5713
+* notice: prev accum: outdated-unq outdated-all / unq all: 1188 81205 / 1215 86846
+* notice: next accum: outdated-unq outdated-all / unq all: 1190 81612 / 1215 87325
+* notice: prev exec diff / last date diff / accum: unq all: +0 +148 -0 -11 / +1 +410 -0 -0 / 1 410
+* notice: removed / changed dates: [2022-10-23] / [2022-10-24 2022-11-06]
+
 2022-11-06T16:06:37Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3405050543 # 598
 * notice: last 14d: unq all: 3 5641
